--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
 
   - job_name: 'fastapi-flyio'
     static_configs:
-      - targets: ['https://api-observability.fly.dev']
+      - targets: ['api-observability.fly.dev:443']
     scheme: https
     metrics_path: '/metrics'
     scrape_interval: 10s
